# SNGitCondDB

./: CMakeLists.txt  README.md  condDB.cc  exercise-gcdb.cc  exercise-lg2.cc  resourceDB.cc
docs/: README.md  ResourceImplementations.md
resources/: a.conf
scripts/: setup-centos7-cvmfs.sh
